remove toList